--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <h1>Healthy sandwiches for your team</h1>
 
-    <img src='/sandwich.png'>
+    <img src='sandwich.png'>
 
     <form role='form'>
       <label for="email">Find out more</label>
@@ -22,17 +22,17 @@
   <div id="buzz">
     <h2><small>The Buzz</small><br />What are people saying?</h2>
     <div>
-      <img src='/person.jpg'>
+      <img src='person.jpg'>
       <p>These sandwiches are the best I've ever tasted, for sure. I now eat them every day - breakfast, lunch and dinner.</p>
       <small>Mr Smith, Professional sandwich taster</small>
     </div>
     <div>
-      <img src='/person.jpg'>
+      <img src='person.jpg'>
       <p>My team are always far more productive after we order from Sam's. 40% more productive, in fact.</p>
       <small>Miss McAdam, CEO Workplace Analytics</small>
     </div>
     <div>
-      <img src='/person.jpg'>
+      <img src='person.jpg'>
       <p>We switched to Sam's Sarnies and won our first government contract the next day. Coincidence? I think not!</p>
     </div>
   </div>
