--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <title>Sam's Sarnies</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+  
+  </head>
 
 <body>
   <div class='jumbotron'>
@@ -19,19 +21,19 @@
     </form>
   </div>
 
-  <div id="buzz">
+  <div id="buzz" class="row">
     <h2><small>The Buzz</small><br />What are people saying?</h2>
-    <div>
+    <div class="col-md-4">
       <img src='person.jpg'>
       <p>These sandwiches are the best I've ever tasted, for sure. I now eat them every day - breakfast, lunch and dinner.</p>
       <small>Mr Smith, Professional sandwich taster</small>
     </div>
-    <div>
+    <div class="col-md-4">
       <img src='person.jpg'>
       <p>My team are always far more productive after we order from Sam's. 40% more productive, in fact.</p>
       <small>Miss McAdam, CEO Workplace Analytics</small>
     </div>
-    <div>
+    <div class="col-md-4"> 
       <img src='person.jpg'>
       <p>We switched to Sam's Sarnies and won our first government contract the next day. Coincidence? I think not!</p>
     </div>
