--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 
   <h2>  <small>The Buzz</small><br />What are people saying?</h2>
-    
+    <div class="container">
     <div id="buzz" class="row">
 
     <div class="col-md-4">
@@ -40,7 +40,7 @@
       <p>We switched to Sam's Sarnies and won our first government contract the next day. Coincidence? I think not!</p>
     </div>
   </div>
-
+  </div>
 
 
   <div id="mission">
