--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
     <div class="container">
     <div id="buzz" class="row">
 
-    <div class="col-md-4">
+    <div class="col-md-4 col-sm-8">
       <img src='person.jpg'>
       <p>These sandwiches are the best I've ever tasted, for sure. I now eat them every day - breakfast, lunch and dinner.</p>
       <small>Mr Smith, Professional sandwich taster</small>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 col-sm-2">
       <img src='person.jpg'>
       <p>My team are always far more productive after we order from Sam's. 40% more productive, in fact.</p>
       <small>Miss McAdam, CEO Workplace Analytics</small>
     </div>
-    <div class="col-md-4"> 
+    <div class="col-md-4 col-sm-2"> 
       <img src='person.jpg'>
       <p>We switched to Sam's Sarnies and won our first government contract the next day. Coincidence? I think not!</p>
     </div>
